--- a/app/src/main/res/layout/activity_another.xml
+++ b/app/src/main/res/layout/activity_another.xml
@@ -13,4 +13,11 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="也别点这个按钮" />
+    <EditText
+        android:id="@+id/input2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp" />
 </RelativeLayout>
